Probleme behoben + Readibility verbessert. Ohne Gui und hard coded auf 2 Spieler.